@@ -3,17 +3,60 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.csipon</groupId>
+    <groupId>group.insyde</groupId>
     <artifactId>spring-boot-starter-flink-statefun</artifactId>
-    <version>0.1.0</version>
-    <name>spring-boot-starter-flink-statefun</name>
+    <version>0.1.0-SNAPSHOT</version>
+
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Spring Boot starter that allow creates stateful functions and run application as remote module
+    </description>
+    <url>https://github.com/4insyde/spring-boot-starter-flink-statefun.git</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Tymur Yarosh</name>
+            <email>ti.yarosh@gmail.com</email>
+            <organization>INSYDE Group</organization>
+            <organizationUrl>https://github.com/4insyde</organizationUrl>
+        </developer>
+        <developer>
+            <name>Pavlo Kurachenko</name>
+            <email>pavlo.kurachenko@gmail.com</email>
+            <organization>INSYDE Group</organization>
+            <organizationUrl>https://github.com/4insyde</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:4insyde/spring-boot-starter-flink-statefun.git</connection>
+        <developerConnection>scm:git:git@github.com:4insyde/spring-boot-starter-flink-statefun.git</developerConnection>
+        <url>https://github.com/4insyde/spring-boot-starter-flink-statefun.git</url>
+    </scm>
+
     <properties>
-        <statefun.version>3.1.0</statefun.version>
-        <spring-boot.version>2.6.7</spring-boot.version>
-        <lombok.version>1.18.24</lombok.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <statefun.version>3.2.0</statefun.version>
+        <spring-boot.version>2.6.7</spring-boot.version>
+        <lombok.version>1.18.24</lombok.version>
+        <delombok.output>target/generated-sources/delombok</delombok.output>
     </properties>
+
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -44,5 +87,37 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>--illegal-access=permit</argLine>
+                    <trimStackTrace>false</trimStackTrace>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
